--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== TechInterviewPrep
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Demo Site: https://boiling-island-4835.herokuapp.com/
 
-Things you may want to cover:
+This website allows interviewees to practice interview questions by answering common brainteasers and interview questions
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
